--- a/src/api/components/user-invitation/templates/invitation.html
+++ b/src/api/components/user-invitation/templates/invitation.html
@@ -1,7 +1,7 @@
 <html>
 	<body>
 		<p>Hello,</p>
-		<p>You were invited to join Aionic.</p>
+		<p>You were invited to join expressjs-api.</p>
 		<p>
 			Complete your registration here: <br />
 			<%= confirmUrl %>
