--- a/src/api/components/user-invitation/templates/invitation.html
+++ b/src/api/components/user-invitation/templates/invitation.html
@@ -1,10 +1,8 @@
 <html>
 	<body>
 		<p>Hello,</p>
-		<p>You were invited to join expressjs-api.</p>
-		<p>
-			Complete your registration here: <br />
-			<%= confirmUrl %>
-		</p>
+		<p>You were invited to join: expressjs-api.</p>
+		<p>Complete your registration <a href="<%= confirmUrl %>" target="_blank">here</a>.</p>
+		<p>Kindest regards.</p>
 	</body>
 </html>
